# Udacity_CPP_FoodAcceptance-

./: .gitignore  CMakeLists.txt  README.md
data/: myDB.db
log/: LogCamIn.txt  LogCamOut.txt
src/: camera.cpp  camera.h  db.cpp  db.h  debugFood.cpp  debugFood.h  foodMain.cpp  foodMain.h  plate.cpp  plate.h  records.cpp  records.h  selfTest.cpp  selfTest.h
